# triangular

./: Cargo.toml  LICENSE  README.md
benches/: triangulation.rs
src/: lib.rs
